apps/home-assistant/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  labels:
    app: homeassistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
        name: homeassistant
    spec:
      hostNetwork: true
      #Allow access to Cluster DNS
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: homeassistant
          image: homeassistant/home-assistant:2026.4
          nodeSelector:
            kubernetes.io/hostname: "rk1-4"
          imagePullPolicy: Always
          volumeMounts:
            - name: homeassistant-data-volume
              mountPath: /config
      volumes:
        - name: homeassistant-data-volume
          persistentVolumeClaim:
            claimName: homeassistant-data
