apps/home-assistant/Service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-ui
spec:
  selector:
    app: homeassistant
  type: LoadBalancer
  ports:
    - port: 80
      name: hassio-gui-api
      targetPort: 8123
