apps/home-assistant/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant
  labels:
    app.kubernetes.io/instance: home-assistant
spec:
  parentRefs:
  - name: https-gateway
    namespace: kube-system
  hostnames:
  - "homeassistant.camsab.me"
  rules:
  - backendRefs:
    - name: homeassistant-ui
      port: 80
