apps/home-assistant/IngressRoute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  labels:
    app.kubernetes.io/instance: home-assistant
spec:
  ingressClassName: traefik
  rules:
  - host: homeassistant.sabby.local
    http:
      paths:
      - backend:
          service:
            name: homeassistant-ui
            port:
              name: http-dashboard
        path: /
        pathType: Prefix
